# legal-case-retrieval

./: .gitignore  AGENT.md  pyproject.toml
docs/: design_change_v1.md  design_v1.md
experiments/: 01_subset_filter.py  02_segment.py  04a_openai_batch.py  04b_llama_extract.py  04c_llama_gguf_extract.py  05_build_index.py  poll_batch.py
experiments/results/: 01_subset_filter.md
src/lcr/: __init__.py  config.py
src/lcr/data/: __init__.py  filter.py
src/lcr/extract/: openai_extractor.py  schemas.py
src/lcr/retrieval/: __init__.py  indexer.py  kind_classifier.py  searcher.py
tests/: test_filter.py  test_retrieval.py  test_schemas_and_kind.py
web/: README.md  index.html
web/css/: base.css  components.css  page.css  tokens.css
web/js/: api.js  config.js  format.js  main.js  render.js
