[project]
name = "lcr"
version = "0.1.0"
description = "法律判決類案搜尋系統 — 從口語事由檢索台灣刑事判決相似案例 (Legal Case Retrieval, RAG)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
# 實驗階段才裝的重套件（embedding / 檢索），先分組避免一開始裝太重
retrieval = [
    "FlagEmbedding>=1.2",
    "chromadb>=0.5",
    "bm25s>=0.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/lcr"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
